gccida/c1/expand_builtin_longjmp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/builtins.c:1107:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v6; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/builtins.c:1121:19: error: use of undeclared identifier 'machine_mode'
v3 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), buf_addr); 
                  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/builtins.c:1126:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), v3); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/builtins.c:1131:22: error: use of undeclared identifier 'machine_mode'
v10 = gen_rtx_MEM( ( machine_mode)v2, v9); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/builtins.c:1154:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( rtx)v15[1]; 
            ^~~~~~
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_longjmp/src/obj/builtins.o] Error 1
